refactor: rename `img_url` to `img` and format dates in the apps
