# apps/go/internal/model/cart.go
@@ -5,8 +5,7 @@ type CartItem struct {
 	Path             string  `json:"path" binding:"required"`
 	Name             string  `json:"name" binding:"required"`
 	NameVariant      string  `json:"name_variant" binding:"required"`
-	ImgURL           *string `json:"img_url,omitempty"`
-	ImgAlt           *string `json:"img_alt,omitempty"`
+	Img              *string `json:"img,omitempty"`
 	PriceIdr         int64   `json:"price_idr" binding:"required"`
 	OriginalPriceIdr int64   `json:"original_price_idr" binding:"required"`
 	Quantity         int     `json:"quantity" binding:"required"`
