# apps/js/src/model/cart.ts
@@ -3,8 +3,7 @@ export type CartItem = {
 	path: string;
 	name: string;
 	name_variant: string;
-	img_url?: string;
-	img_alt?: string;
+	img?: string;
 	price_idr: number;
 	original_price_idr: number;
 	quantity: number;
